# OpenEnv-Hackthon

./: Dockerfile  README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
__pycache__/: models.cpython-312.pyc.1523315387312  tasks.cpython-312.pyc.1523362090928
server/: app.py  environment.py
server/__pycache__/: __init__.cpython-312.pyc.1523308663632  app.cpython-312.pyc.1711225016880  app.cpython-312.pyc.2154129166896  environment.cpython-312.pyc.1711302111088
