[project]
name = "procure_env"
version = "1.0.0"
description = "Industrial B2B Procurement RL Environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.7.4",
    "websockets>=12.0",
    "openai>=2.7.2",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
